--- a/backupmail/ui/selecttypewidget.ui
+++ b/backupmail/ui/selecttypewidget.ui
@@ -57,7 +57,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="akonadi_2">
+    <widget class="QCheckBox" name="nepomuk">
      <property name="enabled">
       <bool>false</bool>
      </property>
